--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,119 +1,52 @@
-ion-menu ion-content {
-  --background: var(--ion-item-background, var(--ion-background-color, #fff));
+
+:root{
+  --warmin-color-yellow:#f9b233;
+  --warmin-color-orange:#EC6730;
+  --warmin-color-purple:#522974;
+  --warmin-color-pinkd:#e62243;
+  --warmin-color-brown:#a9172e;  
 }
 
-ion-menu.md ion-content {
-  --padding-start: 8px;
-  --padding-end: 8px;
-  --padding-top: 20px;
-  --padding-bottom: 20px;
+.margen-menu{
+  margin-top: 2%;
+  width: 80%;
+  height: 100%;
+  border-end-end-radius:40px;
+  border-start-end-radius: 40px;
 }
 
-ion-menu.md ion-list {
-  padding: 20px 0;
+.logo-size{
+  width: 10%;
+  height: 10%;
+}
+.avatar-area{
+  width: 40%;
+  height: 40%;
+  
 }
 
-ion-menu.md ion-note {
-  margin-bottom: 30px;
+.contenedor-avatar{
+  display: flex;
+  justify-content: center;
 }
 
-ion-menu.md ion-list-header,
-ion-menu.md ion-note {
-  padding-left: 10px;
+.margin-logo-orage{
+  padding-top: 20%;
+}
+.margin-bar-orage{
+  padding-top: 15px;
+}
+.color-text-white{
+  color: #fff;
 }
 
-ion-menu.md ion-list#inbox-list {
-  border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
+.border-color-buttom{
+  --border-color: #fff;
+}
+.all-margin-right{    
+  padding: 40px 20px 0px 0px;
 }
 
-ion-menu.md ion-list#inbox-list ion-list-header {
-  font-size: 22px;
-  font-weight: 600;
-
-  min-height: 20px;
-}
-
-ion-menu.md ion-list#labels-list ion-list-header {
-  font-size: 16px;
-
-  margin-bottom: 18px;
-
-  color: #757575;
-
-  min-height: 26px;
-}
-
-ion-menu.md ion-item {
-  --padding-start: 10px;
-  --padding-end: 10px;
-  border-radius: 4px;
-}
-
-ion-menu.md ion-item.selected {
-  --background: rgba(var(--ion-color-primary-rgb), 0.14);
-}
-
-ion-menu.md ion-item.selected ion-icon {
-  color: var(--ion-color-primary);
-}
-
-ion-menu.md ion-item ion-icon {
-  color: #616e7e;
-}
-
-ion-menu.md ion-item ion-label {
-  font-weight: 500;
-}
-
-ion-menu.ios ion-content {
-  --padding-bottom: 20px;
-}
-
-ion-menu.ios ion-list {
-  padding: 20px 0 0 0;
-}
-
-ion-menu.ios ion-note {
-  line-height: 24px;
-  margin-bottom: 20px;
-}
-
-ion-menu.ios ion-item {
-  --padding-start: 16px;
-  --padding-end: 16px;
-  --min-height: 50px;
-}
-
-ion-menu.ios ion-item.selected ion-icon {
-  color: var(--ion-color-primary);
-}
-
-ion-menu.ios ion-item ion-icon {
-  font-size: 24px;
-  color: #73849a;
-}
-
-ion-menu.ios ion-list#labels-list ion-list-header {
-  margin-bottom: 8px;
-}
-
-ion-menu.ios ion-list-header,
-ion-menu.ios ion-note {
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
-ion-menu.ios ion-note {
-  margin-bottom: 8px;
-}
-
-ion-note {
-  display: inline-block;
-  font-size: 16px;
-
-  color: var(--ion-color-medium-shade);
-}
-
-ion-item.selected {
-  --color: var(--ion-color-primary);
+.bold-text{
+  font-weight: bold;
 }
