usando clase scss global

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay" class="margen-menu" style="--background: #EC6730;">
-      <ion-conten class="margin-bar-orage margen-menu">
+      <ion-content class="margin-bar-orage margen-menu">
         <!-- Encabezado -->
         <!-- bar -->
         <div class="ion-text-left ion-margin ">
@@ -56,7 +56,7 @@
           </ion-button>
         </div>
         
-      </ion-conten>
+      </ion-content>
       <!-- footer -->
       <!-- <ion-footer>
         <ion-toolbar>
