--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,13 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /**warmis**/
+    --warmin-color-yellow:#f9b233;
+    --warmin-color-orange:#EC6730;
+    --warmin-color-purple:#522974;
+    --warmin-color-pinkd:#e62243;
+    --warmin-color-brown:#a9172e;  
 }
 
 @media (prefers-color-scheme: default) {
