--- a/src/app/login/registrarse/registrarse.page.scss
+++ b/src/app/login/registrarse/registrarse.page.scss
@@ -89,3 +89,8 @@ margin: -20px 5% 0 5%;
 .no-subrayed{
     text-decoration: none;
 }
+.center-form{
+    display: flex;   
+    justify-content: center; 
+    align-items: center;
+}
