--- a/src/global.scss
+++ b/src/global.scss
@@ -25,26 +25,71 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+    // --warmin-color-yellow:#f9b233;
+    // --warmin-color-orange:#EC6730;
+    // --warmin-color-purple:#522974;
+    // --warmin-color-pinkd:#e62243;
+    // --warmin-color-brown:#a9172e;  
 
-ion-header{
-    text-align: center;
-  }
-  ion-toolbar{
-    --background:#50CD89;
-    color: #ffffff;
-    font-size: 32px;
-  }
 
-  .color-principal{
-    color: #50CD89;
-  }
+*{
+  margin: 2px 0 0 0px;
+  // padding: 2px;
+}
+  //header
+.contenedor-header{
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  background-color: var(--warmin-color-orange);
+  border-end-end-radius: 50px;
+  border-start-end-radius: 50px;
+  max-width: 60%;
+  max-height: 6%;    
+}
+  
+.texto-header{
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
+  padding: 3%;
+}
 
-  .boton-azul{
-    --border-radius: 15px!important; 
-    margin-left: 30px ;
-    margin-right:30px ;
-    height: 70px;
-  }
+.icon-header{
+  padding: 3%;
+}
+  
+  //background
+  
+  //Barra Naranja
+  //tamaño de pantall
+  //image
+  //texto-titulo-bajo image
+  //cotenedor formulario
+  //label
+  //inputs
+  //boton
+  
+
+// ion-header{
+//     text-align: center;
+//   }
+//   ion-toolbar{
+//     --background:#50CD89;
+//     color: #ffffff;
+//     font-size: 32px;
+//   }
+
+//   .color-principal{
+//     color: #50CD89;
+//   }
+
+//   .boton-azul{
+//     --border-radius: 15px!important; 
+//     margin-left: 30px ;
+//     margin-right:30px ;
+//     height: 70px;
+//   }
 
   .custom-modal {
     --backdrop-opacity: 0.5;
