--- a/src/app/login/inicio/inicio.page.scss
+++ b/src/app/login/inicio/inicio.page.scss
@@ -1,22 +1,7 @@
 
-    // --warmin-color-yellow:#f9b233;
-    // --warmin-color-orange:#EC6730;
-    // --warmin-color-purple:#522974;
-    // --warmin-color-pinkd:#e62243;
-    // --warmin-color-brown:#a9172e;  
-
-
-
-//header
-
-
-//background
-
-
-//tamaño de pantall
-//image
-//texto-titulo-bajo image
-//cotenedor formulario
-//label
-//inputs
-//boton
+.contenedor-title{
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+}
