--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,68 +1,68 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay" class="margen-menu" style="--background: #EC6730;">
-      <ion-content class="margin-bar-orage margen-menu">
-        <!-- Encabezado -->
-        <!-- bar -->
-        <div class="ion-text-left ion-margin ">
-          <label class="color-text-white bold-text ">
-            <ion-icon src="/assets/icon/menu.svg"></ion-icon> Menu
-          </label>
-        </div>
-        <!-- Imagen -->
-        <div class="contenedor-avatar">
-          <ion-avatar class="avatar-area">
+    <ion-menu contentId="main-content" type="overlay" class="background-menusliderleft">
+      <!-- Ttitle  -->
+
+      <div class="contenedor-menu">
+        <!-- Encabezado Menú -->
+        <ion-label class="texto-header-menu">
+          <ion-icon class="" src="/assets/icon/menu.svg"></ion-icon> Menú
+        </ion-label>
+        <!-- photo Profile -->
+        <div class="contenedor-item-menu">
+          <ion-avatar class="size-avatar">
             <img src="./assets/img/comprador.jpg" />
           </ion-avatar>
         </div>
-        <!-- Datos de perfil -->
-        <div class="ion-text-center">
-          <ion-label class="bold-text color-text-white">Edison Tanyan</ion-label>
-        </div>
-        <!-- Cédula -->
-        <div class="ion-text-center">
-          <ion-note class="color-text-white bold-text">1324324242</ion-note>          
-        </div>
-        <!-- Numero de telefono -->
-        <div class="ion-text-center">
-          <ion-note class="color-text-white bold-text">0993335589</ion-note>          
+        <!-- date profile -->
+        <div>
+          <div class="contenedor-item-menu text-center text-bold text-white">
+            <ion-label>Edison Tanyan</ion-label>
+          </div>
+          <div class="contenedor-item-menu text-center text-bold">
+            <ion-note class="text-white">1324324242</ion-note>
+          </div>
+          <div class="contenedor-item-menu text-center text-bold">
+            <ion-note class="text-white">0993335589</ion-note>
+          </div>
         </div>
         <!-- Botones de Accion -->
-        <div class="ion-text-left">
-          <ion-button (click)="onClick()" fill="outline" class="color-text-white border-color-buttom bold-text">
-            <ion-icon slot="start" src="/assets/icon/update_date.svg"></ion-icon>
-            Actualizar datos
-          </ion-button>
-          <ion-button (click)="onClick()" fill="outline" class="color-text-white border-color-buttom bold-text">
-            <ion-icon slot="start" src="/assets/icon/ubication.svg"></ion-icon>
-            Ubicación
-          </ion-button>
-          <ion-button (click)="onClick()" fill="outline" class="color-text-white border-color-buttom bold-text">
-            <ion-icon slot="start" src="/assets/icon/vend_favorites.svg"></ion-icon>
-            Vendedores Fav
-          </ion-button>
+        <div>
+          <div class="contenedor-item-menu">
+            <ion-button (click)="onClick()" fill="outline" class="text-white border-white">
+              <ion-icon slot="start" src="/assets/icon/update_date.svg"></ion-icon>
+              Actualizar datos
+            </ion-button>
+          </div>
+          <div class="contenedor-item-menu">
+            <ion-button (click)="onClick()" fill="outline" class="text-white border-white">
+              <ion-icon slot="start" src="/assets/icon/ubication.svg"></ion-icon>
+              Ubicación
+            </ion-button>
+          </div>
+          <div class="contenedor-item-menu">
+            <ion-button (click)="onClick()" fill="outline" class="text-white border-white">
+              <ion-icon  slot="start" src="/assets/icon/vend_favorites.svg"></ion-icon>
+              Vendedores Favoritos
+            </ion-button>
+          </div>
+
+          <!-- logo + cerrar sesion -->
+          <div>
+            <div class="contenedor-item-menu">
+              <ion-img class="size-avatar" src="/assets/icon/logo_white.svg"></ion-img>
+            </div>
+            <div class="contenedor-item-menu">
+              <ion-button (click)="logout()" fill="outline" class="text-white border-white">
+                <ion-icon slot="start" src="/assets/icon/login.svg"></ion-icon>
+                Cerrar Sesión
+              </ion-button>
+            </div>
+          </div>
         </div>
-        <!-- Logo -->
-        <div class="contenedor-avatar margin-logo-orage">
-          <div class="logo-size">
-            <ion-img src="/assets/icon/logo_white.svg"></ion-img>
-          </div>          
-        </div>
-        <!--  -->
-        <div class="contenedor-avatar">
-          <ion-button (click)="logout()" fill="outline" class="color-text-white border-color-buttom">
-            <ion-icon slot="start" src="/assets/icon/login.svg"></ion-icon>
-            Cerrar Sesión
-          </ion-button>
-        </div>
-        
-      </ion-content>
-      <!-- footer -->
-      <!-- <ion-footer>
-        <ion-toolbar>
-          <ion-title>Warmi</ion-title>
-        </ion-toolbar>
-      </ion-footer> -->
+
+
+      </div>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
