--- a/src/app/login/inicio/inicio.page.scss
+++ b/src/app/login/inicio/inicio.page.scss
@@ -5,3 +5,12 @@
     justify-content: center;
     align-items: center;
 }
+
+// ion-list.list-md{
+//     color:  var(--warmin-color-purple);
+//     padding-top: 0px;
+//     padding-bottom: 0px;
+//     border: 4px;
+//     border-radius: 20px 0 20px 20px;
+//     border-style: solid;
+//   }
