--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,8 +16,12 @@
   .contenedor-menu{
     display: flex;     
     flex-direction: column;  
-    justify-content: center;
+    // justify-content: center;
     align-items: center; 
+    // margin-top: 21px;
+    // padding-bottom: 138px;    
+    width: 100%;
+    height: 100%;
   }
 
 .texto-header-menu{
@@ -29,10 +33,8 @@
 
   .contenedor-item-menu{
     padding-top: 2%;
-    padding-bottom: 2%;
-    
+    padding-bottom: 2%;        
   }
-
   .size-avatar{
     width: 150px;
     height: 150px;     
@@ -41,4 +43,33 @@
   .border-white{
     --border-color: #fff;
   }
+  
+  .title-menu{
+    display: flex;
+   flex-direction: row;      
+  }
+
+  .icon-menu-pad{
+    margin-left: 5px;
+    margin-top: 5%;
+  }
+
+  .contenedor-sesion-logo{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  }
+
+  .logo-white{
+    width: 50px;
+    height: 50px;    
+  }
+
+  .size-boton{
+    width: 100%;
+  }
+
   
