--- a/src/app/login/registrarse/registrarse.page.scss
+++ b/src/app/login/registrarse/registrarse.page.scss
@@ -1,96 +1,8 @@
-:root{
-    --warmin-color-yellow:#f9b233;
-    --warmin-color-orange:#EC6730;
-    --warmin-color-purple:#522974;
-    --warmin-color-pinkd:#e62243;
-    --warmin-color-brown:#a9172e;  
-}
-ion-content{
-    margin: auto;
-    padding: auto;
-    width: 100%;
-    height: 100%;
-    --background: rgb(255, 255, 255) url(../../../assets/img/bg_1.svg) no-repeat center center / cover; 
-}
-.size-text14{
-    font-size: 14px;
-}
-.all-margin-right{    
-    padding: 40px 20px 0px 0px;
-}
-
-.container-div{
-margin: -30px 30px 30px 30px;
-}
-
-.bg-orange{
-    background-color: #EC6730;
-    padding: 10px 30% 10px 5px;
-    border-radius: 0 50px 50px 0;
-}
-
-.bold-text{
-    font-weight: bold;
-}
-
-.padding-text-title{
-    padding-top: 15px;
-}
-.color-text-white{
-    color: #fff;
-}
-
-.color-text-purple{
-    color: #522974;
-}
-.color-text-brown{
-    --color: var(--warmin-color-brown);
-}
-.text-center{
-    text-align:center;
-}
-.item-transparent{
-    --background: transparent;
-}
-
-.border-bottom{
-    border-bottom-width: 2px;
-    border-bottom-style: solid;    
-    border-color: #EC6730;
-}
-
-.button-radius-50px{
-    margin: 10px;
-    padding: 5px;
-    --background: #a9172e;
-    --border-radius: 50px;
-    
-}
-
-.footer1{
-    --margin-top: 0px;
-}
-
-.icon-margin{
-    position: relative;
-    top: 25px; /* ajustar los valores para mover la imagen */
-    left: -5px;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    margin: 30%;
-    border:2px solid #fff;
-    display: block;
-}
-.margin-forms{
-margin: -20px 5% 0 5%;
-}
-
-.no-subrayed{
-    text-decoration: none;
-}
-.center-form{
-    display: flex;   
-    justify-content: center; 
-    align-items: center;
-}
+// ion-list.list-md{
+//     color:  var(--warmin-color-purple);
+//     padding-top: 0px;
+//     padding-bottom: 0px;
+//     border: 4px;
+//     border-radius: 20px 0 20px 20px;
+//     border-style: solid;
+//   }
