--- a/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
+++ b/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
@@ -10,21 +10,21 @@
       <ion-label>Fecha ordenes realizadas:</ion-label>
   <ion-datetime-button style="text-align: left; margin-top: 10px;" datetime="datetime"></ion-datetime-button>
 </div>
-<ion-card style="border-radius: 20px;">
+<ion-card *ngFor="let order of orders" style="border-radius: 20px;">
     <ion-list>
       <ion-item>
         <ion-thumbnail slot="start">
           <img src="assets/img/compra.png" />
         </ion-thumbnail>
         <ion-label>
-        <h3>María Perez</h3>
+        <h3>{{order.seller}}</h3>
         <ion-grid>
           <ion-row>
             <ion-col>
-              <p>05/06/2022</p>
+              <p>{{order.deliver_date}}</p>
             </ion-col>
             <ion-col style="text-align: right;">
-              <ion-badge color="warning" style="color: white;">Calificar</ion-badge>
+              <ion-badge color="warning" style="color: white;">{{order.total}}</ion-badge>
             </ion-col>
           </ion-row>
       </ion-grid>
@@ -32,57 +32,10 @@
       </ion-item>
     </ion-list>
     </ion-card>
-    <ion-card style="border-radius: 20px;">
-      <ion-list>
-        <ion-item>
-          <ion-thumbnail slot="start">
-            <img src="assets/img/compra.png" />
-          </ion-thumbnail>
-          <ion-label>
-          <h3>Lechuga crespa</h3>
-          <ion-grid>
-            <ion-row>
-              <ion-col>
-                <p>2 Bultos</p>
-              </ion-col>
-              <ion-col style="text-align: right;">
-                <ion-badge color="success">Calificada</ion-badge>
-              </ion-col>
-            </ion-row>
-        </ion-grid>
-        </ion-label>
-        </ion-item>
-      </ion-list>
-      </ion-card>
-      <ion-card style="border-radius: 20px;">
-        <ion-list>
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img src="assets/img/compra.png" />
-            </ion-thumbnail>
-            <ion-label>
-            <h3>Lechuga crespa</h3>
-            <ion-grid>
-              <ion-row>
-                <ion-col>
-                  <p>2 Bultos</p>
-                </ion-col>
-                <ion-col style="text-align: right;">
-                  <ion-badge color="success">Calificada</ion-badge>
-
-                </ion-col>
-              </ion-row>
-          </ion-grid>
-          </ion-label>
-          </ion-item>
-        </ion-list>
-        </ion-card>
-
-
+  
 <ion-modal [keepContentsMounted]="true">
   <ng-template>
     <ion-datetime presentation="date" id="datetime"></ion-datetime>
   </ng-template>
 </ion-modal>
-
 </ion-content>
