--- a/src/app/ma_vendedora/componets/camioneta/camioneta.component.html
+++ b/src/app/ma_vendedora/componets/camioneta/camioneta.component.html
@@ -1,7 +1,7 @@
 
 
 <ion-card style="width: 93%; height: 575px;">
-  <app-googlemaps [feature] = "feature"></app-googlemaps>
+  <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
 </ion-card>
 
 <ion-button class="ion-padding boton-azul" expand="block" (click)="viewCars()">  &nbsp; &nbsp;Ver todas las camionetas</ion-button>
