--- a/src/app/ma_vendedora/componets/noticias/noticias.component.html
+++ b/src/app/ma_vendedora/componets/noticias/noticias.component.html
@@ -1,36 +1,3 @@
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Vía cerrada</ion-card-title>
-  </ion-card-header>
-
-  <ion-card-content>
-Frente a la plaza principal, grupo de manifestantes.
-  </ion-card-content>
-</ion-card>
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Vía cerrada</ion-card-title>
-  </ion-card-header>
-
-  <ion-card-content>
-Frente a la plaza principal, grupo de manifestantes.
-  </ion-card-content>
-</ion-card>
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Vía cerrada</ion-card-title>
-  </ion-card-header>
-
-  <ion-card-content>
-Frente a la plaza principal, grupo de manifestantes.
-  </ion-card-content>
-</ion-card>
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Vía cerrada</ion-card-title>
-  </ion-card-header>
-
-  <ion-card-content>
-Frente a la plaza principal, grupo de manifestantes.
-  </ion-card-content>
+<ion-card style="width: 93%; height: 575px;">
+  <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
 </ion-card>
