--- a/src/app/ma_vendedora/tab_transporte/camionetas/camionetas.page.html
+++ b/src/app/ma_vendedora/tab_transporte/camionetas/camionetas.page.html
@@ -7,12 +7,13 @@
 <ion-content>
   <ion-searchbar placeholder="Buscar" value=""></ion-searchbar>
   <ion-card>
-  <ion-item *ngFor="let camioneta of listCamionetas" style="font-size: 12px;" [routerLink]="['//ma_vendedora/menu/transporte/perfil-conductor']" >
+  <ion-item *ngFor="let camioneta of listCamionetas" style="font-size: 12px;" [routerLink]="['//ma_vendedora/menu/transporte/perfil-conductor', camioneta.id]" >
     <ion-chip slot="end" color="success">{{camioneta.status}}</ion-chip>
     <ion-thumbnail slot="start">
       <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
     </ion-thumbnail>
-    <ion-label>{{camioneta.description}}<p>{{camioneta.users_id}}</p>
+    
+    <ion-label><h4>{{camioneta.name}}</h4>{{camioneta.description}}<p>{{camioneta.users_id}}</p>
       <p>{{camioneta.car_plate}}</p></ion-label>
   </ion-item>
  
