--- a/src/app/ma_vendedora/componets/compartido/compartido.component.html
+++ b/src/app/ma_vendedora/componets/compartido/compartido.component.html
@@ -1,29 +1,17 @@
 <ion-searchbar placeholder="Buscar" value=""></ion-searchbar>
 <ion-card>
 
-  <ion-item style="font-size: 12px;" (click)="goToProfile()">
-    <ion-chip slot="end" color="success">Activo</ion-chip>
+  <ion-item *ngFor="let shared of shareds" style="font-size: 12px;" (click)="gotoProfile(shared.id)">
+    <ion-chip slot="end" color="success">{{shared.status}}</ion-chip>
     <ion-thumbnail slot="start">
       <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
     </ion-thumbnail>
-    <ion-label>Camioneta doble cabina<p>Juan Perez</p>
-      <p>Carro blanco PCL-323</p></ion-label>
+    <ion-label>{{shared.users_id}}<p>{{shared.name}}</p>
+      <p>{{shared.meeting_point}}</p>
+      <p>{{shared.date}}
+      -- {{shared.hour}}</p>
+    </ion-label>
   </ion-item>
-  <ion-item style="font-size: 12px;" (click)="goToProfile()">
-    <ion-chip slot="end" color="success">Activo</ion-chip>
-    <ion-thumbnail slot="start">
-      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
-    </ion-thumbnail>
-    <ion-label>Camioneta doble cabina<p>Juan Perez</p>
-      <p>Carro blanco PCL-323</p></ion-label>
-  </ion-item>
-  <ion-item style="font-size: 12px;" (click)="goToProfile()">
-    <ion-chip slot="end" color="success">Activo</ion-chip>
-    <ion-thumbnail slot="start">
-      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
-    </ion-thumbnail>
-    <ion-label>Camioneta doble cabina<p>Juan Perez</p>
-      <p>Carro blanco PCL-323</p></ion-label>
-  </ion-item>
+
 
 </ion-card>
