--- a/src/app/ma_vendedora/componets/notificaciones/notificaciones.component.html
+++ b/src/app/ma_vendedora/componets/notificaciones/notificaciones.component.html
@@ -1,3 +1,3 @@
 <ion-card style="width: 93%; height: 600px;">
-  <app-googlemaps [feature] = "feature"></app-googlemaps>
+  <app-googlemaps [feature] = "feature" [modal]="modal"></app-googlemaps>
 </ion-card>
