--- a/src/app/ma_vendedora/componets/productos-tab/productos-tab.component.html
+++ b/src/app/ma_vendedora/componets/productos-tab/productos-tab.component.html
@@ -1,31 +1,13 @@
 <ion-card>
 
-  <ion-item style="font-size: 12px;" >
+  <ion-item *ngFor="let product of products" style="font-size: 12px;" >
     <ion-chip slot="end" color="danger">Eliminar</ion-chip>
     <ion-thumbnail slot="start">
       <img alt="Silhouette of mountains" src="assets/img/compra.png" />
     </ion-thumbnail>
-    <ion-label>Lechuga
-      <p>Cosechada</p>
-      <p>Bulto 3$</p></ion-label>
-  </ion-item>
-  <ion-item style="font-size: 12px;">
-    <ion-chip slot="end" color="danger">Eliminar</ion-chip>
-    <ion-thumbnail slot="start">
-      <img alt="Silhouette of mountains" src="assets/img/compra.png" />
-    </ion-thumbnail>
-    <ion-label>Fréjol
-      <p>Tierno</p>
-      <p>Libra 1$</p></ion-label>
-  </ion-item>
-  <ion-item style="font-size: 12px;">
-    <ion-chip slot="end" color="danger">Eliminar</ion-chip>
-    <ion-thumbnail slot="start">
-      <img alt="Silhouette of mountains" src="assets/img/compra.png" />
-    </ion-thumbnail>
-    <ion-label>Lenteja
-      <p>Fresca</p>
-      <p>1$</p></ion-label>
+    <ion-label>{{product.product}}
+      <p>{{product.description}}</p>
+      <p>{{product.measure}} -- {{product.price}}</p></ion-label>
   </ion-item>
 
 </ion-card>
