--- a/src/app/ma_vendedora/tab_transporte/perfil-conductor/perfil-conductor.page.html
+++ b/src/app/ma_vendedora/tab_transporte/perfil-conductor/perfil-conductor.page.html
@@ -9,10 +9,10 @@
    
     <img width="125" src="assets/img/comprador.jpg" />
     <ion-card-header>
-      <ion-card-title> Juan Perez</ion-card-title>
+      <ion-card-title> {{name}}</ion-card-title>
      </ion-card-header>
     <ion-card-content>
-      0993335599
+      {{phone}}
     </ion-card-content>
   
   </ion-card>
@@ -22,8 +22,10 @@
       <ion-card-title>Descripción</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      <p>{{description}}</p>
+      <p>{{color}}</p>
+      <p>{{car_plate}}</p>
+
     </ion-card-content>
 
     <form [formGroup]="form" style="text-align: center;">      
@@ -36,7 +38,7 @@
 
   </ion-card>
 
-  <ion-button class="ion-padding" expand="full" style="--background: #50CD89;" [routerLink]="['/consumidor/tab-inicial/productos', id]">Contactar</ion-button>
+  <ion-button class="ion-padding" expand="full" style="--background: #50CD89;"><ion-icon name="logo-whatsapp"></ion-icon> <a href="https://wa.me/593993335589" style="color: whitesmoke;"> &nbsp;&nbsp; Contactar</a></ion-button>
 
 <br>
   <ion-card  class="ion-margin">
